# parallel_prog

./: .gitignore  README.md
Lab_1/: CMakeLists.txt  console.cc  log.txt
Lab_1/python_check/: check.py  graphics.py
Lab_2/: CMakeLists.txt  console.cc  log_omp.txt
Lab_2/python_check/: check.py  graphics.py
Lab_3/korolev/: 12.txt  20.txt  4.txt
Lab_3/python_check/: check.py  comprasion.py
Lab_4/: main.cpp  matrix.h
